--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -600,24 +600,12 @@ video {
   }
 }
 
-.static {
-  position: static;
-}
-
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
 
 .relative {
   position: relative;
-}
-
-.sticky {
-  position: sticky;
 }
 
 .-left-20 {
@@ -650,14 +638,6 @@ video {
 
 .top-1 {
   top: 0.25rem;
-}
-
-.bottom-16 {
-  bottom: 4rem;
-}
-
-.right-32 {
-  right: 8rem;
 }
 
 .m-1 {
@@ -700,10 +680,6 @@ video {
 
 .mt-16 {
   margin-top: 4rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 
 .block {
@@ -750,98 +726,8 @@ video {
   height: 100vh;
 }
 
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-\[calc\(100vh-74px\)\] {
-  height: calc(100vh - 74px);
-}
-
-.h-\[calc\(100vh-5004px\)\] {
-  height: calc(100vh - 5004px);
-}
-
-.h-\[calc\(100vh-100px\)\] {
-  height: calc(100vh - 100px);
-}
-
-.h-\[calc\(100vh-150px\)\] {
-  height: calc(100vh - 150px);
-}
-
-.h-\[5vh\] {
-  height: 5vh;
-}
-
-.h-\[55vh\] {
-  height: 55vh;
-}
-
-.h-\[75vh\] {
-  height: 75vh;
-}
-
-.h-\[76vh\] {
-  height: 76vh;
-}
-
-.h-\[77vh\] {
-  height: 77vh;
-}
-
-.h-\[78vh\] {
-  height: 78vh;
-}
-
 .max-h-full {
   max-height: 100%;
-}
-
-.max-h-fit {
-  max-height: -moz-fit-content;
-  max-height: fit-content;
-}
-
-.max-h-96 {
-  max-height: 24rem;
-}
-
-.max-h-\[calc\(100vh-74px\)\] {
-  max-height: calc(100vh - 74px);
-}
-
-.max-h-\[500px\] {
-  max-height: 500px;
-}
-
-.max-h-\[36vh\] {
-  max-height: 36vh;
-}
-
-.max-h-\[55vh\] {
-  max-height: 55vh;
-}
-
-.max-h-\[75vh\] {
-  max-height: 75vh;
-}
-
-.max-h-\[76vh\] {
-  max-height: 76vh;
-}
-
-.max-h-\[65vh\] {
-  max-height: 65vh;
-}
-
-.max-h-\[77vh\] {
-  max-height: 77vh;
-}
-
-.max-h-\[78vh\] {
-  max-height: 78vh;
 }
 
 .w-12 {
@@ -880,32 +766,12 @@ video {
   width: 100%;
 }
 
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
-
 .flex-grow {
   flex-grow: 1;
 }
 
-.flex-grow-0 {
-  flex-grow: 0;
-}
-
 .grow-0 {
   flex-grow: 0;
-}
-
-.basis-60 {
-  flex-basis: 15rem;
-}
-
-.basis-5 {
-  flex-basis: 1.25rem;
-}
-
-.basis-1 {
-  flex-basis: 0.25rem;
 }
 
 .-rotate-90 {
@@ -961,12 +827,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -1052,19 +912,6 @@ video {
   padding-right: 0.5rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1090,11 +937,6 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .font-bold {
@@ -1123,6 +965,10 @@ video {
 
 .invert {
   --tw-invert: invert(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1195,38 +1041,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:h-\[35vh\] {
-    height: 35vh;
-  }
-
-  .sm\:h-\[45vh\] {
-    height: 45vh;
-  }
-
-  .sm\:h-\[55vh\] {
-    height: 55vh;
-  }
-
-  .sm\:h-\[50vh\] {
-    height: 50vh;
-  }
-
-  .sm\:h-\[54vh\] {
-    height: 54vh;
-  }
-
-  .sm\:h-\[53vh\] {
-    height: 53vh;
-  }
-
-  .sm\:max-h-\[55vh\] {
-    max-height: 55vh;
-  }
-
-  .sm\:max-h-\[35vh\] {
-    max-height: 35vh;
-  }
-
   .sm\:w-1\/2 {
     width: 50%;
   }
@@ -1272,14 +1086,6 @@ video {
 }
 
 @media (min-width: 2550px) {
-  .\34xl\:h-\[75vh\] {
-    height: 75vh;
-  }
-
-  .\34xl\:max-h-\[75vh\] {
-    max-height: 75vh;
-  }
-
   .\34xl\:w-1\/6 {
     width: 16.666667%;
   }
