--- a/public/styles.css
+++ b/public/styles.css
@@ -52,8 +52,16 @@ body {
   animation: unhide 0s 1s forwards;
 }
 
-#header {
-  animation: fade-down 0.5s 0.4s backwards;
+#leftSide {
+  animation: fade-up 1s 0.1s ease-in-out;
+}
+
+#rightSide {
+  animation: fade-up 1s 0.1s ease-in-out;
+}
+
+#horizontalSpacer {
+  animation: fade-up 0.5s 0.4s backwards;
 }
 
 #logo {
