--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -630,6 +630,10 @@ video {
   left: -5rem;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
 .bottom-12{
   bottom: 3rem;
 }
@@ -670,8 +674,36 @@ video {
   top: 3rem;
 }
 
+.top-0{
+  top: 0px;
+}
+
+.-right-2{
+  right: -0.5rem;
+}
+
+.-top-2{
+  top: -0.5rem;
+}
+
+.-right-1{
+  right: -0.25rem;
+}
+
+.-top-1{
+  top: -0.25rem;
+}
+
 .z-50{
   z-index: 50;
+}
+
+.m-2{
+  margin: 0.5rem;
+}
+
+.m-auto{
+  margin: auto;
 }
 
 .mx-auto{
@@ -713,6 +745,10 @@ video {
   margin-inline-start: 0.75rem;
 }
 
+.mt-0{
+  margin-top: 0px;
+}
+
 .mt-12{
   margin-top: 3rem;
 }
@@ -725,8 +761,32 @@ video {
   margin-top: 4rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
+}
+
+.-mb-1{
+  margin-bottom: -0.25rem;
+}
+
+.mb-0{
+  margin-bottom: 0px;
+}
+
+.-mb-5{
+  margin-bottom: -1.25rem;
+}
+
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+
+.mb-1\.5{
+  margin-bottom: 0.375rem;
 }
 
 .box-border{
@@ -751,6 +811,16 @@ video {
 
 .aspect-video{
   aspect-ratio: 16 / 9;
+}
+
+.size-3{
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
+.size-1{
+  width: 0.25rem;
+  height: 0.25rem;
 }
 
 .h-1\/4{
@@ -787,6 +857,14 @@ video {
 
 .h-9{
   height: 2.25rem;
+}
+
+.h-9\/10{
+  height: 90%;
+}
+
+.h-96{
+  height: 24rem;
 }
 
 .h-\[80px\]{
@@ -849,12 +927,12 @@ video {
   width: 2rem;
 }
 
-.w-9{
-  width: 2.25rem;
+.w-8\/10{
+  width: 80%;
 }
 
-.w-96{
-  width: 24rem;
+.w-9{
+  width: 2.25rem;
 }
 
 .w-full{
@@ -895,6 +973,17 @@ video {
 
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes ping{
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping{
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
 .cursor-pointer{
@@ -963,6 +1052,10 @@ video {
 
 .overflow-x-hidden{
   overflow-x: hidden;
+}
+
+.break-words{
+  overflow-wrap: break-word;
 }
 
 .rounded-full{
@@ -1054,6 +1147,11 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
 }
 
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+
 .bg-red-500{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
@@ -1066,6 +1164,21 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-sky-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 189 248 / var(--tw-bg-opacity, 1));
+}
+
+.bg-sky-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
 }
 
 .p-1{
@@ -1097,16 +1210,16 @@ video {
   padding-right: 0.5rem;
 }
 
+.pb-1{
+  padding-bottom: 0.25rem;
+}
+
 .pl-2{
   padding-left: 0.5rem;
 }
 
 .pr-1{
   padding-right: 0.25rem;
-}
-
-.pt-12{
-  padding-top: 3rem;
 }
 
 .pt-2{
@@ -1137,11 +1250,6 @@ video {
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .text-8xl{
@@ -1176,6 +1284,10 @@ video {
   font-weight: 600;
 }
 
+.leading-tight{
+  line-height: 1.25;
+}
+
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
@@ -1189,6 +1301,10 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.opacity-75{
+  opacity: 0.75;
 }
 
 .shadow-lg{
@@ -1317,6 +1433,11 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-green-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-white\/50:hover{
   background-color: rgb(255 255 255 / 0.5);
 }
@@ -1324,6 +1445,10 @@ video {
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:outline-green-500:focus{
+  outline-color: #22c55e;
 }
 
 .peer:checked ~ .peer-checked\:bg-blue-600{
@@ -1383,6 +1508,16 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
+.dark\:text-gray-500:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-gray-800:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
+
 .dark\:text-gray-900:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
@@ -1420,6 +1555,10 @@ video {
     display: none;
   }
 
+  .sm\:h-10{
+    height: 2.5rem;
+  }
+
   .sm\:h-\[700px\]{
     height: 700px;
   }
@@ -1442,6 +1581,19 @@ video {
 
   .sm\:justify-end{
     justify-content: flex-end;
+  }
+
+  .sm\:rounded-lg{
+    border-radius: 0.5rem;
+  }
+
+  .sm\:pt-12{
+    padding-top: 3rem;
+  }
+
+  .sm\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .sm\:text-9xl{
