--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -630,6 +630,14 @@ video {
   left: -5rem;
 }
 
+.-right-1{
+  right: -0.25rem;
+}
+
+.-top-1{
+  top: -0.25rem;
+}
+
 .bottom-0{
   bottom: 0px;
 }
@@ -674,26 +682,6 @@ video {
   top: 3rem;
 }
 
-.top-0{
-  top: 0px;
-}
-
-.-right-2{
-  right: -0.5rem;
-}
-
-.-top-2{
-  top: -0.5rem;
-}
-
-.-right-1{
-  right: -0.25rem;
-}
-
-.-top-1{
-  top: -0.25rem;
-}
-
 .z-50{
   z-index: 50;
 }
@@ -719,6 +707,10 @@ video {
 .my-auto{
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.mb-1\.5{
+  margin-bottom: 0.375rem;
 }
 
 .mb-2{
@@ -769,26 +761,6 @@ video {
   margin-top: 1.25rem;
 }
 
-.-mb-1{
-  margin-bottom: -0.25rem;
-}
-
-.mb-0{
-  margin-bottom: 0px;
-}
-
-.-mb-5{
-  margin-bottom: -1.25rem;
-}
-
-.mb-1{
-  margin-bottom: 0.25rem;
-}
-
-.mb-1\.5{
-  margin-bottom: 0.375rem;
-}
-
 .box-border{
   box-sizing: border-box;
 }
@@ -816,11 +788,6 @@ video {
 .size-3{
   width: 0.75rem;
   height: 0.75rem;
-}
-
-.size-1{
-  width: 0.25rem;
-  height: 0.25rem;
 }
 
 .h-1\/4{
@@ -877,6 +844,14 @@ video {
 
 .h-screen{
   height: 100vh;
+}
+
+.h-60{
+  height: 15rem;
+}
+
+.h-52{
+  height: 13rem;
 }
 
 .max-h-96{
@@ -1152,6 +1127,11 @@ video {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
+}
+
 .bg-red-500{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
@@ -1164,21 +1144,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-sky-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(56 189 248 / var(--tw-bg-opacity, 1));
-}
-
-.bg-sky-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
 }
 
 .p-1{
@@ -1224,6 +1189,10 @@ video {
 
 .pt-2{
   padding-top: 0.5rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
 .text-center{
