--- a/public/global.css
+++ b/public/global.css
@@ -9,15 +9,29 @@
 }
 
 ::-webkit-scrollbar-track {
-    background: #353535;
+    background: #111827;
     border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #ffffff;
+    background: #bfbfbf;
     border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
+    background: #848484;
+}
+
+.dark ::-webkit-scrollbar-track {
+    background: #000000;
+    border-radius: 5px;
+}
+
+.dark ::-webkit-scrollbar-thumb {
+    background: #ffffff;
+    border-radius: 5px;
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
     background: #b8b8b8;
 }
