--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -626,6 +626,10 @@ video {
   position: relative;
 }
 
+.sticky{
+  position: sticky;
+}
+
 .-left-20{
   left: -5rem;
 }
@@ -666,12 +670,20 @@ video {
   right: 0px;
 }
 
+.right-1\/2{
+  right: 50%;
+}
+
 .right-2{
   right: 0.5rem;
 }
 
 .right-px{
   right: 1px;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .top-1{
@@ -721,6 +733,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
 .ml-2{
   margin-left: 0.5rem;
 }
@@ -745,6 +761,14 @@ video {
   margin-top: 0px;
 }
 
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .mt-12{
   margin-top: 3rem;
 }
@@ -763,6 +787,10 @@ video {
 
 .mt-5{
   margin-top: 1.25rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .box-border{
@@ -806,6 +834,10 @@ video {
   height: 3rem;
 }
 
+.h-28{
+  height: 7rem;
+}
+
 .h-32{
   height: 8rem;
 }
@@ -822,6 +854,10 @@ video {
   height: 1.5rem;
 }
 
+.h-64{
+  height: 16rem;
+}
+
 .h-8{
   height: 2rem;
 }
@@ -836,10 +872,6 @@ video {
 
 .h-96{
   height: 24rem;
-}
-
-.h-\[80px\]{
-  height: 80px;
 }
 
 .h-full{
@@ -918,6 +950,10 @@ video {
   max-width: 36rem;
 }
 
+.flex-1{
+  flex: 1 1 0%;
+}
+
 .grow-0{
   flex-grow: 0;
 }
@@ -939,6 +975,11 @@ video {
 
 .-rotate-90{
   --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-y-\[-1\]{
+  --tw-scale-y: -1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1003,6 +1044,12 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-1 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
@@ -1082,11 +1129,6 @@ video {
   background-color: rgb(15 15 15 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#d2d3db\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(210 211 219 / var(--tw-bg-opacity, 1));
-}
-
 .bg-black\/50{
   background-color: rgb(0 0 0 / 0.5);
 }
@@ -1161,10 +1203,6 @@ video {
   padding: 0.75rem;
 }
 
-.p-4{
-  padding: 1rem;
-}
-
 .p-px{
   padding: 1px;
 }
@@ -1193,6 +1231,10 @@ video {
 
 .pr-1{
   padding-right: 0.25rem;
+}
+
+.pt-0{
+  padding-top: 0px;
 }
 
 .pt-2{
@@ -1344,6 +1386,20 @@ video {
 }
 
 .dark ::-webkit-scrollbar-thumb:hover {
+  background: #b8b8b8;
+}
+
+.home ::-webkit-scrollbar-track {
+  background: #000000;
+  border-radius: 0px;
+}
+
+.home ::-webkit-scrollbar-thumb {
+  background: #ffffff;
+  border-radius: 0px;
+}
+
+.home ::-webkit-scrollbar-thumb:hover {
   background: #b8b8b8;
 }
 
@@ -1598,24 +1654,20 @@ video {
     width: 16rem;
   }
 
-  .sm\:w-\[110px\]{
-    width: 110px;
-  }
-
-  .sm\:w-\[425px\]{
-    width: 425px;
+  .sm\:w-\[100px\]{
+    width: 100px;
   }
 
   .sm\:w-\[700px\]{
     width: 700px;
   }
 
-  .sm\:w-\[105px\]{
-    width: 105px;
+  .sm\:w-full{
+    width: 100%;
   }
 
-  .sm\:w-\[100px\]{
-    width: 100px;
+  .sm\:w-96{
+    width: 24rem;
   }
 
   .sm\:justify-end{
@@ -1624,6 +1676,10 @@ video {
 
   .sm\:rounded-lg{
     border-radius: 0.5rem;
+  }
+
+  .sm\:p-2{
+    padding: 0.5rem;
   }
 
   .sm\:pt-12{
@@ -1655,12 +1711,45 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .md\:mb-40{
+    margin-bottom: 10rem;
+  }
+
   .md\:w-1\/3{
     width: 33.333333%;
   }
 
   .md\:w-3\/6{
     width: 50%;
+  }
+
+  .md\:w-96{
+    width: 24rem;
+  }
+
+  .md\:w-full{
+    width: 100%;
+  }
+
+  .md\:items-center{
+    align-items: center;
+  }
+
+  .md\:space-x-32 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(8rem * var(--tw-space-x-reverse));
+    margin-left: calc(8rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 }
 
